my-apps/ztp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ztp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ztp
  template:
    metadata:
      labels:
        app: ztp
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: ztp
        image: scr4pp/ztp:armd
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: ztp-db-data
          mountPath: "/data/db"
      volumes:
      - name: ztp-db-data
        persistentVolumeClaim:
          claimName: ztp-db-pvc
