my-apps/ztp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ztp
spec:
  selector:
    app: ztp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
